[package]
name = "YouTube"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wry = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
select = "0.6"
notify-rust = "4.5.0"
winreg = "0.52"

[profile.release]
windows-subsystem = "windows"
opt-level = 3

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
file = "app.rc"
high-dpi-aware = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"